# Claybird

./: .gitignore  README.md  pyproject.toml
src/claybird/: __init__.py
src/claybird/app/: claybird.py
src/claybird/application/ports/inbound/: controller_handler_port.py  server_port.py
src/claybird/application/ports/outbound/: connection_handler_port.py  crud_repository_port.py  dependency_container_port.py  dependency_injector_port.py  event_bus_port.py  logger_port.py
src/claybird/application/proxies/: crud_repository.py
src/claybird/core/: app.py  dependency_container.py
src/claybird/core/controllers/: controller.py  mappers.py
src/claybird/core/models/: entity.py  field_type.py  field_utilities.py  fields.py
src/claybird/core/repositories/: crud_repository.py  crud_repository_interface.py  mysql_crud_repository.py
src/claybird/domain/entities/: __init__.py  entity.py  field.py  field_type.py
src/claybird/infrastructure/adapters/: shared.py
src/claybird/infrastructure/adapters/inbound/http/: fastapi_controller_handler.py  uvicorn_server.py
src/claybird/infrastructure/bootstrap/: connections_bootstrap.py  controllers_bootstrap.py  settings_bootstrap.py
src/claybird/infrastructure/factories/: connection_handler_factory.py
src/claybird/managers/: connection_manager.py  controller_manager.py  dependency_manager.py  event_manager.py  settings_manager.py
src/claybird/managers/connection_handlers/: connection_handler_interface.py  mysql_connection_manager.py
src/claybird/utils/: logger.py  text_formatter.py
(+10 files in other folders)
